--- a/css/index.css
+++ b/css/index.css
@@ -31,15 +31,14 @@
 }
 
 /* Estilos para el formulario de transacción */
-.contenedor_padre {
-    display: flex;
-    justify-content: space-between;
-}
-
 .formulario {
+    float: none;
     width: 50%;
     padding: 25px;
     border: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
 
 .transa {
