--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,8 @@
     border: 1px solid #ccc;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    box-sizing: border-box;
 }
 
 .transa {
@@ -57,12 +58,12 @@
     color: #b4b4b4;
     text-align: center;
     border-radius: 50%;
-    line-height: 27px;
+    line-height: 35px;
     margin-right: 15px;
 }
 
 .form-group {
-    margin-bottom: 25px; 
+    margin-bottom: 25px;
 }
 
 .btn-primary {
@@ -76,5 +77,22 @@
     cursor: pointer;
     text-align: center;
 }
+
+@media (max-width: 600px) {
+    .formulario {
+        width: 50%;
+    }
+
+    .transa {
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 400px) {
+    .formulario {
+        width: 60%;
+    }
+}
+
 
 
